完成了待办页面的开发

--- a/src/assets/css/dimens.scss
+++ b/src/assets/css/dimens.scss
@@ -4,4 +4,5 @@ $rootFontSize : 375 / 10;
   @return $px / $rootFontSize + rem
 }
 
-$bgColor: #f8f8fe
+$bgColor: #f8f8fe;
+$topicColor: rbg(102, 110, 232);
